--- a/AGOID.68428/manifest.json
+++ b/AGOID.68428/manifest.json
@@ -1,15 +1,15 @@
 {
     "@context": "http://iiif.io/api/presentation/3/context.json",
-    "id": "https://miniatures-iiif.fitzmuseum.cam.ac.uk/AGOID.29372/manifest.json",
+    "id": "https://miniatures-iiif.fitzmuseum.cam.ac.uk/AGOID.68428/manifest.json",
     "type": "Manifest",
     "label": {
         "en": [
-            "Unknown Woman, formerly called Anne, Lady Hunsdon (c. 1529–1607)"
+            "Portrait of a Lady"
         ]
     },
     "summary": {
         "en": [
-            "The UV image shows that the miniature is in a good state of conservation. The pale orange UV fluorescence colour (for instance evident on the ruff) is due to the presence of lead white.\n \nThe playing card was not accessible for the analysis, but the mercury (Hg) MA-XRF map shows the presence of one heart, likely made of vermilion."
+            "The miniature is in a good state of conservation, with no evident retouching by UV or NIR images.\n\nLead (Pb) MA-XRF map shows a possible change in the dress' sleeves."
         ]
     },
     "requiredStatement": {
@@ -27,28 +27,28 @@
     "rights": "http://creativecommons.org/licenses/by-nc-nd/4.0/",
     "items": [
         {
-            "id": "https://miniatures-iiif.fitzmuseum.cam.ac.uk/AGOID.29372/canvas/0",
+            "id": "https://miniatures-iiif.fitzmuseum.cam.ac.uk/AGOID.68428/canvas/0",
             "type": "Canvas",
-            "height": 2914,
-            "width": 2375,
+            "height": 2267,
+            "width": 1665,
             "items": [
                 {
-                    "id": "https://miniatures-iiif.fitzmuseum.cam.ac.uk/AGOID.29372/page/0/0",
+                    "id": "https://miniatures-iiif.fitzmuseum.cam.ac.uk/AGOID.68428/page/0/0",
                     "type": "AnnotationPage",
                     "items": [
                         {
-                            "id": "https://miniatures-iiif.fitzmuseum.cam.ac.uk/AGOID.29372/painting/0",
+                            "id": "https://miniatures-iiif.fitzmuseum.cam.ac.uk/AGOID.68428/painting/0",
                             "type": "Annotation",
                             "motivation": "painting",
                             "body": {
                                 "type": "Choice",
                                 "items": [
                                     {
-                                        "id": "https://iiif.fitz.ms/iiif/3/68fffff0-57f8-45f2-9e2d-9bd6568e1c36.jpg/full/max/0/default.jpg",
+                                        "id": "https://iiif.fitz.ms/iiif/3/71a9016e-7a8d-4a9d-90cb-b2d58ccd4165.jpg/full/max/0/default.jpg",
                                         "type": "Image",
                                         "format": "image/jpeg",
-                                        "height": 2914,
-                                        "width": 2375,
+                                        "height": 2267,
+                                        "width": 1665,
                                         "label": {
                                             "en": [
                                                 "Natural Light"
@@ -56,18 +56,18 @@
                                         },
                                         "service": [
                                             {
-                                                "id": "https://iiif.fitz.ms/iiif/3/68fffff0-57f8-45f2-9e2d-9bd6568e1c36.jpg",
+                                                "id": "https://iiif.fitz.ms/iiif/3/71a9016e-7a8d-4a9d-90cb-b2d58ccd4165.jpg",
                                                 "type": "ImageService3",
                                                 "profile": "level2"
                                             }
                                         ]
                                     },
                                     {
-                                        "id": "https://iiif.fitz.ms/iiif/3/88f69385-d9bb-4afa-afb2-27e174c95e0c.jpg/full/max/0/default.jpg",
+                                        "id": "https://iiif.fitz.ms/iiif/3/2ccb5f2c-0534-4c4d-82bd-8eb81fbedb54.jpg/full/max/0/default.jpg",
                                         "type": "Image",
                                         "format": "image/jpeg",
-                                        "height": 2914,
-                                        "width": 2375,
+                                        "height": 2267,
+                                        "width": 1665,
                                         "label": {
                                             "en": [
                                                 "Raking Light"
@@ -75,18 +75,18 @@
                                         },
                                         "service": [
                                             {
-                                                "id": "https://iiif.fitz.ms/iiif/3/88f69385-d9bb-4afa-afb2-27e174c95e0c.jpg",
+                                                "id": "https://iiif.fitz.ms/iiif/3/2ccb5f2c-0534-4c4d-82bd-8eb81fbedb54.jpg",
                                                 "type": "ImageService3",
                                                 "profile": "level2"
                                             }
                                         ]
                                     },
                                     {
-                                        "id": "https://iiif.fitz.ms/iiif/3/807cc275-1e91-48e1-933c-541312b7b29a.jpg/full/max/0/default.jpg",
+                                        "id": "https://iiif.fitz.ms/iiif/3/0fbb5bf4-abf8-4549-82fd-416194620aee.jpg/full/max/0/default.jpg",
                                         "type": "Image",
                                         "format": "image/jpeg",
-                                        "height": 2914,
-                                        "width": 2375,
+                                        "height": 2267,
+                                        "width": 1665,
                                         "label": {
                                             "en": [
                                                 "Infrared"
@@ -94,18 +94,18 @@
                                         },
                                         "service": [
                                             {
-                                                "id": "https://iiif.fitz.ms/iiif/3/807cc275-1e91-48e1-933c-541312b7b29a.jpg",
+                                                "id": "https://iiif.fitz.ms/iiif/3/0fbb5bf4-abf8-4549-82fd-416194620aee.jpg",
                                                 "type": "ImageService3",
                                                 "profile": "level2"
                                             }
                                         ]
                                     },
                                     {
-                                        "id": "https://iiif.fitz.ms/iiif/3/e291a5e8-6490-4494-97b8-f2f9e75ad664.jpg/full/max/0/default.jpg",
+                                        "id": "https://iiif.fitz.ms/iiif/3/70e07cc9-9a51-498f-be11-55f45bbb20b9.jpg/full/max/0/default.jpg",
                                         "type": "Image",
                                         "format": "image/jpeg",
-                                        "height": 2914,
-                                        "width": 2375,
+                                        "height": 2267,
+                                        "width": 1665,
                                         "label": {
                                             "en": [
                                                 "Ultraviolet"
@@ -113,18 +113,18 @@
                                         },
                                         "service": [
                                             {
-                                                "id": "https://iiif.fitz.ms/iiif/3/e291a5e8-6490-4494-97b8-f2f9e75ad664.jpg",
+                                                "id": "https://iiif.fitz.ms/iiif/3/70e07cc9-9a51-498f-be11-55f45bbb20b9.jpg",
                                                 "type": "ImageService3",
                                                 "profile": "level2"
                                             }
                                         ]
                                     },
                                     {
-                                        "id": "https://iiif.fitz.ms/iiif/3/5dd62ca2-6045-40c1-a35f-10fd0ea60f4d.jpg/full/max/0/default.jpg",
+                                        "id": "https://iiif.fitz.ms/iiif/3/dcf18a86-af98-4afa-bdd1-79041c4891fe.jpg/full/max/0/default.jpg",
                                         "type": "Image",
                                         "format": "image/jpeg",
-                                        "height": 2914,
-                                        "width": 2375,
+                                        "height": 2267,
+                                        "width": 1665,
                                         "label": {
                                             "en": [
                                                 "X-ray"
@@ -132,7 +132,7 @@
                                         },
                                         "service": [
                                             {
-                                                "id": "https://iiif.fitz.ms/iiif/3/5dd62ca2-6045-40c1-a35f-10fd0ea60f4d.jpg",
+                                                "id": "https://iiif.fitz.ms/iiif/3/dcf18a86-af98-4afa-bdd1-79041c4891fe.jpg",
                                                 "type": "ImageService3",
                                                 "profile": "level2"
                                             }
@@ -140,7 +140,7 @@
                                     }
                                 ]
                             },
-                            "target": "https://miniatures-iiif.fitzmuseum.cam.ac.uk/AGOID.29372/canvas/0"
+                            "target": "https://miniatures-iiif.fitzmuseum.cam.ac.uk/AGOID.68428/canvas/0"
                         }
                     ]
                 }
@@ -148,12 +148,12 @@
             "physicalDimensions": {
                 "type": "PhysicalDimension",
                 "profile": "http://iiif.io/api/annex/extensions/physdim",
-                "physicalScale": 0.0196,
+                "physicalScale": 0.0199,
                 "physicalUnits": "mm"
             },
             "annotations": [
                 {
-                    "id": "https://miniatures-iiif.fitzmuseum.cam.ac.uk/AGOID.29372/page/0/0",
+                    "id": "https://miniatures-iiif.fitzmuseum.cam.ac.uk/AGOID.68428/page/0/0",
                     "type": "AnnotationPage",
                     "items": []
                 }
