deploy: aeb74e0344635f92c73fd29c808b7e5cd9d8b436

--- a/AGOID.106991/manifest.json
+++ b/AGOID.106991/manifest.json
@@ -9,7 +9,7 @@
     },
     "summary": {
         "en": [
-            "The miniature is in a good state of conservation. The UV image shows the presence of some losses in the pictorial film, which result in bright white areas corresponding to the parchment underneath. \n\nThe calcium (Ca) MA-XRF map shows that the chalk used for the flesh tone is a fair amount."
+            "The miniature is in a good state of preservation. The UV image shows the presence of some losses in the pictorial film, which result in bright white areas corresponding to the parchment underneath. The two small areas on the flesh tone with a bright fluorescence are caused by a retouching made with zinc white. \n\nThe mercury (Hg) map shows considerable amount of vermilion used for outlining facial features and in the lips and hair.\nThe barium (Ba) in the background is likely to be an impurity of azurite."
         ]
     },
     "requiredStatement": {
