--- a/AGOID.29372/manifest.json
+++ b/AGOID.29372/manifest.json
@@ -9,7 +9,7 @@
     },
     "summary": {
         "en": [
-            "The UV image shows that the miniature is in a good state of conservation. The pale orange UV fluorescence colour (for instance evident on the ruff) is due to the presence of lead white.\n \nThe playing card was not accessible for the analysis, but the mercury (Hg) MA-XRF map shows the presence of one heart, likely made of vermilion."
+            "The UV image shows that the miniature is in a good state of preservation. The pale orange UV fluorescence colour (for instance evident on the ruff) is due to the presence of lead white.\n\nSilver has been detected in the pupils, presumably used to indicate a reflection of light. \n \nThe playing card was not accessible for the analysis, but the mercury (Hg) MA-XRF map shows the presence of one heart, likely made of vermilion."
         ]
     },
     "requiredStatement": {
